--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,16 @@
       "example",
       "test"
     ],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
         "allowJs": true,
         "module": "esnext",
-        "target": "es5",
+        "target": "es6",
         "moduleResolution": "node",
         "isolatedModules": true,
         "sourceMap": true,
